AG-24954 fix title alignment
Merge in EXTENSIONS/vpn-extension from fix/AG-24954 to master

Squashed commit of the following:

commit c288b76372f950365cefb6ffa4b73ec17a3104aa
Author: Dmitriy Seregin <d.seregin@adguard.com>
Date:   Thu Aug 17 13:47:57 2023 +0400

    layout fixes

commit 08573d68e8aa288a30515f402fe956024796857b
Author: Maxim Topciu <mtopciu@adguard.com>
Date:   Wed Aug 16 17:54:31 2023 +0300

    AG-24954 fix title alignment

--- a/src/options/components/Exclusions/exclusions.pcss
+++ b/src/options/components/Exclusions/exclusions.pcss
@@ -152,6 +152,7 @@
             background: none;
             transition: var(--t3) background-color;
             border-radius: 8px;
+            text-align: left;
 
             &:hover {
                 background-color: var(--grayF3);
@@ -184,11 +185,10 @@
 
     &__item-desc {
         display: flex;
-        margin: 5px 20px 0 0;
+        margin-top: 4px;
         font-size: 1.4rem;
         line-height: 1.6rem;
         color: var(--gray88);
-        max-width: 450px;
         overflow: hidden;
         text-overflow: ellipsis;
     }
