--- a/src/options/styles/button.pcss
+++ b/src/options/styles/button.pcss
@@ -1,8 +1,12 @@
+button,
+.button {
+    font-family: var(--font-stack);
+}
+
 .button {
     display: inline-block;
     vertical-align: middle;
     padding: 0;
-    font-family: var(--font-stack);
     font-size: 16px;
     line-height: 24px;
     text-align: center;
