--- a/src/popup/styles/button.pcss
+++ b/src/popup/styles/button.pcss
@@ -1,8 +1,12 @@
+button,
+.button {
+    font-family: var(--font-stack);
+}
+
 .button {
     cursor: pointer;
     text-decoration: none;
     display: inline-block;
-    font-family: var(--font-stack);
     border: 1px solid transparent;
     outline: none;
     background-color: transparent;
